grammarAParser.py
# Generated from .\grammarA.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class grammarAParser ( Parser ):

    grammarFileName = "grammarA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'-'", "'<'", "'>'", 
                     "'=='", "'>='", "'<='", "'!='", "'='", "';'", "'('", 
                     "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "MINUS", "LESS_THAN", "GREATER_THAN", 
                      "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ", "ASSIGN", "SEMI", 
                      "LPAREN", "RPAREN", "OPEN_BRACE", "CLOSE_BRACE", "Digit", 
                      "Alphabets", "WS" ]

    RULE_r = 0
    RULE_ifb = 1
    RULE_then = 2
    RULE_ei = 3
    RULE_condition = 4
    RULE_jop = 5
    RULE_id1 = 6
    RULE_ifbs = 7
    RULE_assign_s = 8
    RULE_num = 9

    ruleNames =  [ "r", "ifb", "then", "ei", "condition", "jop", "id1", 
                   "ifbs", "assign_s", "num" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    MINUS=3
    LESS_THAN=4
    GREATER_THAN=5
    EQUALS=6
    GT_EQ=7
    LT_EQ=8
    NOT_EQ=9
    ASSIGN=10
    SEMI=11
    LPAREN=12
    RPAREN=13
    OPEN_BRACE=14
    CLOSE_BRACE=15
    Digit=16
    Alphabets=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifb(self):
            return self.getTypedRuleContext(grammarAParser.IfbContext,0)


        def assign_s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarAParser.Assign_sContext)
            else:
                return self.getTypedRuleContext(grammarAParser.Assign_sContext,i)


        def getRuleIndex(self):
            return grammarAParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitR" ):
                return visitor.visitR(self)
            else:
                return visitor.visitChildren(self)




    def r(self):

        localctx = grammarAParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==grammarAParser.Alphabets:
                self.state = 20
                self.assign_s()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.ifb()
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==grammarAParser.Alphabets:
                self.state = 27
                self.assign_s()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(grammarAParser.IF, 0)

        def LPAREN(self):
            return self.getToken(grammarAParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(grammarAParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(grammarAParser.RPAREN, 0)

        def OPEN_BRACE(self):
            return self.getToken(grammarAParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(grammarAParser.CLOSE_BRACE, 0)

        def assign_s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarAParser.Assign_sContext)
            else:
                return self.getTypedRuleContext(grammarAParser.Assign_sContext,i)


        def ifbs(self):
            return self.getTypedRuleContext(grammarAParser.IfbsContext,0)


        def then(self):
            return self.getTypedRuleContext(grammarAParser.ThenContext,0)


        def getRuleIndex(self):
            return grammarAParser.RULE_ifb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfb" ):
                listener.enterIfb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfb" ):
                listener.exitIfb(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfb" ):
                return visitor.visitIfb(self)
            else:
                return visitor.visitChildren(self)




    def ifb(self):

        localctx = grammarAParser.IfbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ifb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(grammarAParser.IF)
            self.state = 34
            self.match(grammarAParser.LPAREN)
            self.state = 35
            self.condition()
            self.state = 36
            self.match(grammarAParser.RPAREN)
            self.state = 37
            self.match(grammarAParser.OPEN_BRACE)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.assign_s() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==grammarAParser.IF:
                self.state = 44
                self.ifbs()


            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==grammarAParser.Alphabets:
                self.state = 47
                self.assign_s()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(grammarAParser.CLOSE_BRACE)
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 54
                self.then()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ei(self):
            return self.getTypedRuleContext(grammarAParser.EiContext,0)


        def ELSE(self):
            return self.getToken(grammarAParser.ELSE, 0)

        def OPEN_BRACE(self):
            return self.getToken(grammarAParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(grammarAParser.CLOSE_BRACE, 0)

        def assign_s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarAParser.Assign_sContext)
            else:
                return self.getTypedRuleContext(grammarAParser.Assign_sContext,i)


        def ifbs(self):
            return self.getTypedRuleContext(grammarAParser.IfbsContext,0)


        def getRuleIndex(self):
            return grammarAParser.RULE_then

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThen" ):
                listener.enterThen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThen" ):
                listener.exitThen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThen" ):
                return visitor.visitThen(self)
            else:
                return visitor.visitChildren(self)




    def then(self):

        localctx = grammarAParser.ThenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_then)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.ei()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==grammarAParser.ELSE:
                self.state = 58
                self.match(grammarAParser.ELSE)
                self.state = 59
                self.match(grammarAParser.OPEN_BRACE)
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 60
                        self.assign_s() 
                    self.state = 65
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==grammarAParser.IF:
                    self.state = 66
                    self.ifbs()


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==grammarAParser.Alphabets:
                    self.state = 69
                    self.assign_s()
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 75
                self.match(grammarAParser.CLOSE_BRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarAParser.ELSE)
            else:
                return self.getToken(grammarAParser.ELSE, i)

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(grammarAParser.IF)
            else:
                return self.getToken(grammarAParser.IF, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(grammarAParser.LPAREN)
            else:
                return self.getToken(grammarAParser.LPAREN, i)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarAParser.ConditionContext)
            else:
                return self.getTypedRuleContext(grammarAParser.ConditionContext,i)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(grammarAParser.RPAREN)
            else:
                return self.getToken(grammarAParser.RPAREN, i)

        def OPEN_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarAParser.OPEN_BRACE)
            else:
                return self.getToken(grammarAParser.OPEN_BRACE, i)

        def CLOSE_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarAParser.CLOSE_BRACE)
            else:
                return self.getToken(grammarAParser.CLOSE_BRACE, i)

        def assign_s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarAParser.Assign_sContext)
            else:
                return self.getTypedRuleContext(grammarAParser.Assign_sContext,i)


        def ifbs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarAParser.IfbsContext)
            else:
                return self.getTypedRuleContext(grammarAParser.IfbsContext,i)


        def getRuleIndex(self):
            return grammarAParser.RULE_ei

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEi" ):
                listener.enterEi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEi" ):
                listener.exitEi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEi" ):
                return visitor.visitEi(self)
            else:
                return visitor.visitChildren(self)




    def ei(self):

        localctx = grammarAParser.EiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ei)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 78
                    self.match(grammarAParser.ELSE)
                    self.state = 79
                    self.match(grammarAParser.IF)
                    self.state = 80
                    self.match(grammarAParser.LPAREN)
                    self.state = 81
                    self.condition()
                    self.state = 82
                    self.match(grammarAParser.RPAREN)
                    self.state = 83
                    self.match(grammarAParser.OPEN_BRACE)
                    self.state = 87
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 84
                            self.assign_s() 
                        self.state = 89
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==grammarAParser.IF:
                        self.state = 90
                        self.ifbs()


                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==grammarAParser.Alphabets:
                        self.state = 93
                        self.assign_s()
                        self.state = 98
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 99
                    self.match(grammarAParser.CLOSE_BRACE) 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id1(self):
            return self.getTypedRuleContext(grammarAParser.Id1Context,0)


        def jop(self):
            return self.getTypedRuleContext(grammarAParser.JopContext,0)


        def num(self):
            return self.getTypedRuleContext(grammarAParser.NumContext,0)


        def getRuleIndex(self):
            return grammarAParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = grammarAParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.id1()
            self.state = 107
            self.jop()
            self.state = 108
            self.num()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(grammarAParser.EQUALS, 0)

        def NOT_EQ(self):
            return self.getToken(grammarAParser.NOT_EQ, 0)

        def LESS_THAN(self):
            return self.getToken(grammarAParser.LESS_THAN, 0)

        def GREATER_THAN(self):
            return self.getToken(grammarAParser.GREATER_THAN, 0)

        def LT_EQ(self):
            return self.getToken(grammarAParser.LT_EQ, 0)

        def GT_EQ(self):
            return self.getToken(grammarAParser.GT_EQ, 0)

        def getRuleIndex(self):
            return grammarAParser.RULE_jop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJop" ):
                listener.enterJop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJop" ):
                listener.exitJop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJop" ):
                return visitor.visitJop(self)
            else:
                return visitor.visitChildren(self)




    def jop(self):

        localctx = grammarAParser.JopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_jop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << grammarAParser.LESS_THAN) | (1 << grammarAParser.GREATER_THAN) | (1 << grammarAParser.EQUALS) | (1 << grammarAParser.GT_EQ) | (1 << grammarAParser.LT_EQ) | (1 << grammarAParser.NOT_EQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Alphabets(self, i:int=None):
            if i is None:
                return self.getTokens(grammarAParser.Alphabets)
            else:
                return self.getToken(grammarAParser.Alphabets, i)

        def getRuleIndex(self):
            return grammarAParser.RULE_id1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId1" ):
                listener.enterId1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId1" ):
                listener.exitId1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId1" ):
                return visitor.visitId1(self)
            else:
                return visitor.visitChildren(self)




    def id1(self):

        localctx = grammarAParser.Id1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.match(grammarAParser.Alphabets)
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==grammarAParser.Alphabets):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfbsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifb(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarAParser.IfbContext)
            else:
                return self.getTypedRuleContext(grammarAParser.IfbContext,i)


        def getRuleIndex(self):
            return grammarAParser.RULE_ifbs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfbs" ):
                listener.enterIfbs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfbs" ):
                listener.exitIfbs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfbs" ):
                return visitor.visitIfbs(self)
            else:
                return visitor.visitChildren(self)




    def ifbs(self):

        localctx = grammarAParser.IfbsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifbs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.ifb()
                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==grammarAParser.IF):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_sContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id1(self):
            return self.getTypedRuleContext(grammarAParser.Id1Context,0)


        def ASSIGN(self):
            return self.getToken(grammarAParser.ASSIGN, 0)

        def num(self):
            return self.getTypedRuleContext(grammarAParser.NumContext,0)


        def SEMI(self):
            return self.getToken(grammarAParser.SEMI, 0)

        def getRuleIndex(self):
            return grammarAParser.RULE_assign_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_s" ):
                listener.enterAssign_s(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_s" ):
                listener.exitAssign_s(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_s" ):
                return visitor.visitAssign_s(self)
            else:
                return visitor.visitChildren(self)




    def assign_s(self):

        localctx = grammarAParser.Assign_sContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign_s)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.id1()
            self.state = 123
            self.match(grammarAParser.ASSIGN)
            self.state = 124
            self.num()
            self.state = 125
            self.match(grammarAParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Digit(self):
            return self.getToken(grammarAParser.Digit, 0)

        def MINUS(self):
            return self.getToken(grammarAParser.MINUS, 0)

        def getRuleIndex(self):
            return grammarAParser.RULE_num

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNum" ):
                listener.enterNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNum" ):
                listener.exitNum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNum" ):
                return visitor.visitNum(self)
            else:
                return visitor.visitChildren(self)




    def num(self):

        localctx = grammarAParser.NumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_num)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==grammarAParser.MINUS:
                self.state = 127
                self.match(grammarAParser.MINUS)


            self.state = 130
            self.match(grammarAParser.Digit)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





